Implementando Material Design

--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -7,10 +7,10 @@
 @import 'OOCSS'
 //@import 'lib/modal'
 @import 'lib/notifications'
-@import 'lib/buttons'
-@import 'lib/forms'
+//@import 'lib/buttons'
+//@import 'lib/forms'
 @import 'lib/messagesFlash'
-@import 'lib/materialDesign'
+//@import 'lib/materialDesign'
 @import 'lib/loader'
 
 vendor-prefixes = o ms webkit moz official
@@ -72,13 +72,6 @@ header
 		width 200px
 		border-radius 50%
 		margin-bottom 20px
-	.userUsername
-		text-align center
-		font-size 1.5rem
-	.backContinue
-		cursor pointer
-		font-size 3rem
-		margin 0
 	input
 		font-size 1.2rem
 		padding 10px
