--- a/views/collections/index.jade
+++ b/views/collections/index.jade
@@ -20,27 +20,27 @@ block content
 		p Manipula la informacion de la #[strong Base de Datos]
 		p ¡Ten Cuidado! Rectificar antes de realizar cualquier accion.
 
-	form.form.formLabelInput#formCollections
-		article.inputContainer
-			label.label(for='collection') Coleccion
-			select#collection(name='collection' size='#{numberOfCollections}' required)
+	form.form-horizontal#formCollections
+		.form-group
+			label(for='collection') Coleccion
+			select#collection.form-control(name='collection' size='#{numberOfCollections}' required)
 				for model in models
 					option(value='#{model.modelName}' ) #{model.collection.collectionName}
 
 		section#filterSearch.form.formLabelInput
 
-		article.alignItemsEnd
-			button.btn.effect.btnInfo(type='button' id='findInCollection' data-action='find') Buscar
-			button.btn.effect.btnSuccess(type='button' id='AgregateInCollection' data-action='create') Agregar
-			button.btn.effect.btnError(type='button' id='emptyCollection' data-action='delete') Vaciar
+		.btn-group
+			button.btn.btn-info.btn-raised(type='button' id='findInCollection' data-action='find') Buscar
+			button.btn.btn-success.btn-raised(type='button' id='AgregateInCollection' data-action='create') Agregar
+			button.btn.btn-danger.btn-raised(type='button' id='emptyCollection' data-action='delete') Vaciar
 
 	//section.documents#results
 	//section#addDocument
 
 	template#templateField
-		article.inputContainer#TField
+		.form-group#TField
 			label.label
-			input.data
+			input.data.form-control
 
 block scripts
 	script(src='/js/collections.js')
